--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     },
     "options_page": "options.html",
     "permissions": ["storage"],
-    "host_permissions": ["https://*.atlassian.net/*"],
+    "host_permissions": ["https://*.atlassian.net/*", "https://api.openai.com/*"],
     "icons": {
       "16": "icons/icon16.png",
       "48": "icons/icon48.png",
