--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,16 @@
       "default_popup": "popup.html"
     },
     "options_page": "options.html",
-    "permissions": ["storage"],
-    "host_permissions": ["https://*.atlassian.net/*", "https://api.openai.com/*"],
+    "permissions": ["storage", "tabs", "scripting"],
+    "host_permissions": ["https://*.atlassian.net/*", "https://api.openai.com/*", "https://issue-checklist-prod-2.herokuapp.com/*"],
+    "content_scripts": [
+      {
+        "matches": ["https://*.atlassian.net/*", "https://issue-checklist-prod-2.herokuapp.com/*"],
+        "js": ["content-script-jira.js"],
+        "run_at": "document_idle",
+        "all_frames": false
+      }
+    ],
     "icons": {
       "16": "icons/icon16.png",
       "48": "icons/icon48.png",
